--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,8 +20,8 @@
         <h2>Current Conditions</h2>
         <form id="conditions-form">
           <div class="form-row">
-            <label for="timeOfDay">Time of Day</label>
-            <input type="number" id="timeOfDay" name="timeOfDay" min="0" max="23" value="6" required />
+            <label for="time">Time (24-hour)</label>
+            <input type="time" id="time" name="time" value="06:30" required />
           </div>
           <div class="form-row">
             <label for="waterTemp">Water Temp (°C)</label>
